# CEREBRUM

./: .gitignore  .gitmodules  .hf_readme_update.md  .mcp.json  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  NOTICE  PAPER.md  PARALLAX.md  PLAN_phase185_186.md  Parallax_Genesis_Transcript.docx  Parallax_Genesis_Transcript.md  Parallax_NDA.docx  Parallax_NDA.md  Parallax_Origin_Story.docx  Parallax_Plain_Language_Guide.docx  Parallax_Plain_Language_Guide.md  Parallax_White_Paper.docx  Parallax_White_Paper.md  Parallax_White_Paper_arXiv.docx  Parallax_White_Paper_arXiv.md  Parallax_Whitepaper_V1.docx  Parallax_Whitepaper_V1.md  QUICKSTART.md  README.md  ROADMAP_FUTURE.md  SECURITY.md  TESTING.md  TEST_LOG.md  conv_test.txt  diag_2000.csv  discovery_verification_report.json  discovery_verification_report.md  docker-compose.scale.yml  docker-compose.yml  (+14 more)
.claude/: launch.json  settings.local.json
.playwright-mcp/: page-2026-06-02T23-22-40-274Z.yml
adapters/: __init__.py  conceptnet_adapter.py  csv_adapter.py  distributed_adapter.py  federated_adapter.py  file_adapter.py  mmap_adapter.py  neo4j_adapter.py  neptune_adapter.py  networkx_adapter.py  orin_node.py  parquet_adapter.py  perception_adapter.py  rdf_adapter.py  remote_adapter.py  sql_adapter.py  stream_adapter.py
api/: main.py  metrics.py  orin_router.py  peer_discovery.py  schemas.py  server.py  telemetry_bridge.py  ue_toolkit_adapter.py  ue_toolkit_client.py
arxiv_submission/: paper_001.bbl  paper_001.tex
benchmarks/: CAUSAL_PROXY_RATIONALE.md  README.md  autotune_benchmark.py  baseline_comparison.py  build_mid_name_map.py  causal_accuracy_comparison.py  causal_epistemic_benchmark.py  cerebrum_tuner.py  conceptnet_eval.py  cwq_eval.py  feature_impact_benchmark.py  full_system_eval.py  grailqa_full_eval.py  graph_algo_comparison.py  hardware_benchmark.py  hetionet_cerebrum_eval.py  hetionet_eval.py  hetionet_param_eval.py  ikgwq_eval.py  ikgwq_metaqa.py  metaqa_analyze.py  metaqa_eval.py  metaqa_tune.py  mmap_speed_test.py  monitor.py  param_init_survey.py  phase184_diagnose.py  phase184_hop1_audit.py  relation_path_classifier.py  rem_synthesis_eval.py  sdrb_analysis.py  synthetic_eval.py  tuner_20260521T213043.jsonl  tuner_20260522T124211.jsonl  tuner_20260526T052608.jsonl  tuner_20260526T053606.jsonl  tuner_20260526T234630.jsonl  tuner_20260527T050107.jsonl  tuner_20260527T182626.jsonl  tuner_20260527T193450.jsonl  (+17 more)
cli/: cerebrum.py  parallax.py
core/: __init__.py  active_inference.py  alignment_engine.py  api_key_store.py  attention_engine.py  aura_memory.py  auto_approver.py  autonomous_loop.py  autonomous_researcher.py  bridge_engine.py  calibration_engine.py  candidate_registry.py  causal_discovery_engine.py  causal_engine.py  cerebellar_engine.py  cerebrum.py  chemical_modulator.py  community_engine.py  community_hypothesis.py  consolidation_engine.py  contradiction_engine.py  contradiction_resolver.py  conversation.py  counterfactual_engine.py  default_mode_engine.py  dialogue_graph.py  discovery_calibrator.py  discovery_engine.py  discretizer.py  dscf_gpu.py  dscf_spark.py  embedding_engine.py  epistemic_gate.py  external_validator.py  extraction_engine.py  federated_registry.py  frontal_engine.py  global_workspace.py  goal_system.py  graph_adapter.py  (+73 more)
docs/: AGI_ROADMAP.md  API_REFERENCE.md  ARCHITECTURE.md  ARXIV_SUBMISSION_GUIDE.md  BENCHMARK_ANALYSIS_V2.24.md  BENCHMARK_ANALYSIS_V2.33.1.md  BENCHMARK_ANALYSIS_V2.51.0.md  BENCHMARK_CANONICAL.md  CEREBRUM_BENCHMARK_COMPARISON_PAPER.md  CEREBRUM_EXPLAINED.md  CEREBRUM_EXPLAINER.md  CEREBRUM_Investor_Benchmark_Report.docx  CEREBRUM_MASTER_PAPER.md  CEREBRUM_MASTER_PAPER_CLEAN.md  CEREBRUM_MASTER_SCIENTIFIC_MANUSCRIPT.docx  CEREBRUM_MASTER_SCIENTIFIC_MANUSCRIPT.md  CEREBRUM_MASTER_WHITEPAPER.md  CEREBRUM_PUBLICATION_GAMEPLAN.md  CEREBRUM_Plain_Language_Guide_Professional.md  CEREBRUM_for_Humans.md  CLAUDE.md  CONCEPT_SHEET.md  Cerebrum_White_Paper.md  DEPLOYMENT.md  DOC_INDEX.md  GLOSSARY.md  HOW_IT_WORKS.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  NOVEL_CONTRIBUTIONS.md  PAPER.md  PARALLAX.md  PERFORMANCE_TUNING.md  PRODUCT_TEASER.md  PROMOTION_PLAN.md  Parallax_Genesis_Transcript.md  Parallax_Newbie_Primer.md  Parallax_Origin_Story.md  Parallax_Plain_Language_Guide.md  Parallax_Plain_Language_Guide_Professional.md  (+31 more)
docs_recovered/: API_REFERENCE.md  ARCHITECTURE.md  ARXIV_SUBMISSION_GUIDE.md  AUTOMATION_GUIDE.md  BENCHMARK_ANALYSIS_V2.51.0.md  CEREBRUM_EXPLAINED.md  CEREBRUM_MASTER_PAPER.md  CEREBRUM_MASTER_SCIENTIFIC_MANUSCRIPT.md  CEREBRUM_Plain_Language_Guide_Professional.md  CLAUDE.md  COMMERCIALIZATION_STRATEGY.md  Cerebrum_White_Paper.md  DEPLOYMENT.md  GLOSSARY.md  HOW_IT_WORKS.md  INTEGRATION_GUIDE.md  NOVEL_CONTRIBUTIONS.md  PAPER.md  REASONING_STUDIO_GUIDE.md  REPO_DESCRIPTION.txt  old
examples/: README.md  Validation_Walkthrough.ipynb  csv_quickstart.py  neo4j_quickstart.py  reconstruct_missing_edges.py  text_to_graph.py  wikidata_quickstart.py
frontend/: package-lock.json  package.json  vite.config.js
integrations/: __init__.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
llm_bridge/: README.md  __init__.py  adapters.py  context_formatter.py  langchain_adapter.py  llamaindex_adapter.py  query_grounder.py  slm_language_layer.py
logs/: .mcp.json  metaqa_1hop.txt  metaqa_out.txt  mypy_errors_final.txt
monitoring/: docker-compose.monitoring.yml  prometheus.yml
reasoning/: __init__.py  aaak_steered_traversal.py  answer_extractor.py  consensus_hierarchy_engine.py  consensus_scorer.py  deductive_traversal.py  distributed_traversal.py  engram_consolidation.py  path_scorer.py  (+9 more)
studio/: README.md  pyproject.toml
studio/frontend/: package-lock.json  vite.config.js
studio/frontend/src/: api.js  index.css
studio/frontend/src/components/: Brain3D.jsx  ChemicalPanel.jsx  GoalPanel.jsx  LoopPanel.jsx  ProvenancePanel.jsx  QueryPanel.jsx
studio/ui/: 3d_explorer.html  index.html  requirements.txt  studio.py
(+2783 files in other folders)
