[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cerebrum-kg-core"
version = "2.90.0"

description = "CEREBRUM — Community-Structured Graph Attention for Knowledge Graph Reasoning"
authors = [
    {name = "Bryan Alexander Buchorn", email = "bryan.alexander@buchorn.com"},
]
license = {text = "AGPL-3.0-only"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
kge        = ["pykeen>=1.10.0"]
api        = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0", "pydantic>=2.0.0"]
monitoring = ["prometheus-client>=0.20.0"]
neo4j      = ["neo4j>=5.8.0"]
rdf        = ["SPARQLWrapper>=2.0"]
enterprise = ["gremlinpython>=3.7.0", "pyspark>=3.5.0", "graphframes>=0.8.0"]
dev        = ["pytest>=7.0", "pytest-asyncio>=0.21", "matplotlib>=3.7.0"]
tuning     = ["optuna>=3.2.0", "rich>=13.0.0"]
docs       = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]

# ── GPU / accelerator extras ──────────────────────────────────────────────
# Install the base torch package; the correct CUDA/ROCm/CPU-only wheel
# is chosen at install time via the --index-url flag (see DEPLOYMENT.md).
gpu   = ["torch>=2.0.0"]
# Google TPU (Cloud TPU v4/v5p) and AWS Trainium / Inferentia 2
tpu   = ["torch>=2.0.0", "torch-xla>=2.0.0"]
# Intel Gaudi 2 / 3 (Habana Labs)
gaudi = ["torch>=2.0.0", "habana-torch-plugin>=1.16.0"]

orin   = ["paramiko>=3.0.0"]
studio = ["cerebrum-kg-studio>=2.65.1"]
all    = ["cerebrum-kg-core[embeddings,api,neo4j,dev,enterprise,gpu,monitoring,tuning]"]

[project.scripts]
cerebrum = "cli.cerebrum:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "psutil.*",
    "pyvis.*",
    "SPARQLWrapper.*",
    "websocket.*",
    "cugraph.*",
    "cudf.*",
    "cupy.*",
    "sklearn.*",
    "docx.*",
    "habana_frameworks.*",
    "torch_xla.*",
]
ignore_missing_imports = true
